<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GCM Android App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prefs">Preferences</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="summary_receive_notifications">Receive notifications of new messages</string>
    <string name="notifications">Notifications</string>
    <string name="enable_vibrate">Vibrate</string>
    <string name="summary_vibration_device">Vibrate the device at each new notification message</string>
	<string name="deleted_messages">Deleted messages: </string>
	<string name="error_message">Error message: </string>
	<string name="notify_message">New notification message will be shown here.</string>
	
</resources>
